; ModuleID = '/home/carl/AnghaBench/darknet/src/extr_data.c_load_data_in_thread.c'
source_filename = "/home/carl/AnghaBench/darknet/src/extr_data.c_load_data_in_thread.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.load_args = type { i32 }

@load_thread = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [23 x i8] c"Thread creation failed\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @load_data_in_thread(i32 %0) #0 {
  %2 = alloca %struct.load_args, align 4
  %3 = alloca i32, align 4
  %4 = alloca %struct.load_args*, align 8
  %5 = getelementptr inbounds %struct.load_args, %struct.load_args* %2, i32 0, i32 0
  store i32 %0, i32* %5, align 4
  %6 = call %struct.load_args* @calloc(i32 1, i32 4)
  store %struct.load_args* %6, %struct.load_args** %4, align 8
  %7 = load %struct.load_args*, %struct.load_args** %4, align 8
  %8 = bitcast %struct.load_args* %7 to i8*
  %9 = bitcast %struct.load_args* %2 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 4 %8, i8* align 4 %9, i64 4, i1 false)
  %10 = load i32, i32* @load_thread, align 4
  %11 = load %struct.load_args*, %struct.load_args** %4, align 8
  %12 = call i64 @pthread_create(i32* %3, i32 0, i32 %10, %struct.load_args* %11)
  %13 = icmp ne i64 %12, 0
  br i1 %13, label %14, label %16

14:                                               ; preds = %1
  %15 = call i32 @error(i8* getelementptr inbounds ([23 x i8], [23 x i8]* @.str, i64 0, i64 0))
  br label %16

16:                                               ; preds = %14, %1
  %17 = load i32, i32* %3, align 4
  ret i32 %17
}

declare dso_local %struct.load_args* @calloc(i32, i32) #1

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #2

declare !callback !2 dso_local i64 @pthread_create(i32*, i32, i32, %struct.load_args*) #1

declare dso_local i32 @error(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
!2 = !{!3}
!3 = !{i64 2, i64 3, i1 false}
